syntax = "proto3"; 

package buddy.users.v1; 

option go_package = "github.com/30Piraten/buddy-backend/gen/go/proto/users/v1;usersv1";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc ListUsers(ListUserRequest) returns (ListUserResponse);
}

message CreateUserRequest {
    string email = 1;
    string handle = 2;
    string name = 3;
}

message GetUserRequest {
    string id = 1; 
}

message ListUserRequest {
    int32 page = 1;
    int32 page_size = 2;
}

message CreateUserResponse {
    string id = 1; 
    string email = 2; 
    string handle = 3; 
    string name = 4;
    string created_at = 5; 
}

message GetUserResponse {
    repeated CreateUserResponse users = 1;
}

message ListUserResponse {
    repeated CreateUserResponse users = 1;
}